// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`absolute 1`] = `
{
  "children": [
    {
      "height": 50,
      "width": 50,
      "x": 10,
      "y": 10,
    },
    {
      "height": 50,
      "width": 50,
      "x": 70,
      "y": 70,
    },
  ],
  "height": 70,
  "width": 70,
  "x": 0,
  "y": 0,
}
`;

exports[`left top 1`] = `
{
  "children": [
    {
      "children": [
        {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 50,
        },
      ],
      "height": 100,
      "width": 50,
      "x": 100,
      "y": 100,
    },
  ],
  "height": 100,
  "width": 50,
  "x": 0,
  "y": 0,
}
`;
